Closed Bug 922499 Opened 11 years ago Closed 11 years ago

IonMonkey: SetPropertyIC generic proxy stub mistakenly swallows DOM proxies

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: efaust, Assigned: efaust)

Details

Attachments

(1 file)

The interactions between SetPropertyIC::attachGenericProxy() and GenerateProxyClassGuards() leaves a jump where a fall-through is meant, meaning the check that excludes the DOM proxies is skipped. Potentionally noticable performance penalties here, if lots of unshodowed sets get passed over.
Attached patch FixSplinter Review
Embarassing, but fixed.
Attachment #813319 - Flags: review?(kvijayan)
Attachment #813319 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/mozilla-central/rev/8b5aa45e7f76
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: